--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "test/task",
   "description": "task for proficiency level evaluation",
-  "keywords": ["usa", "relocation"],
+  "keywords": ["banner"],
   "license": "troll_face",
   "type": "project",
   "require": {
